--- a/Wireframe/style.css
+++ b/Wireframe/style.css
@@ -64,8 +64,8 @@ footer {
   text-align: center;
   padding: 10px;
   border-top: 1px solid #ccc;
-  /*position: fixed;
-  bottom: 0;*/
+  position: fixed;
+  bottom: 0;
 }
 
 
